<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EjemploGL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Arriba">Arriba</string>
    <string name="Abajo">Abajo</string>
    <string name="Izquierda">Izquierda</string>
    <string name="Derecha">Derecha</string>
    <string name="Frente">Frente</string>
    <string name="Fondo">Fondo</string>

</resources>
